--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "express": "^4.19.2",
     "nodemon": "^3.1.3",
     "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
   },
   "version": "1.0.0",
   "description": "To install dependencies:",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon src/index.ts"
+    "dev": "nodemon src/index.ts"
   },
   "author": "aditya",
   "license": "ISC"
